2009-05-15  Thomas Hinkle  <tom@grenville>

	*
	src/lib/plugins/import_export/gxml_plugin/gxml2_importer.py (RecHandler.endElement):
	Add code for parsing yields field into yields and yields_unit.

	* src/lib/plugins/import_export/gxml_plugin/gxml2_exporter.py (recipe_table_to_xml.__init__):
	Change servings to yields.

	* src/lib/backends/db_tests.py (test_unicode): Extend tests of
	unicode support.

2009-05-10  Thomas Hinkle  <tom@grenville>

	* src/lib/importers/xml_importer.py (Converter.__init__): Get rid
	of self.name assignment (Thread throws an error otherwise)

	* src/lib/backends/db.py (RecData._force_unicode): Force unicode
	for modify methods as well (fixes traceback on import with
	non-unicode text that was getting fed straight to sqlite.

2009-05-07  Thomas Hinkle  <tom@grenville>

	* src/lib/exporters/exporter.py (exporter_mult._grab_attr_): Add yields/yield_unit
	(exporter.__init__._grab_attr_): Add support for yields/yield_unit

2009-05-05  Thomas Hinkle  <tom@grenville>

	* src/lib/threadManager.py (SuspendableThread.__init__): Don't set name attribute on Thread (pass it to Thread.__init__() call (setting name throws an error in python 2.6)

	* src/lib/plugins/import_export/web_import_plugin/webpage_importer.py (WebParser.__init__):
	No longer set name attribute (this breaks the python 2.6
	implementation of Thread)

	* src/lib/importers/interactive_importer.py: Add yield_unit to
	buttons.

2009-05-01  Thomas Hinkle  <tom@grenville>

	* src/lib/recipeIdentifier.py (get_ingredient_hash): md5 ->
	hashlib (remove deprecated md5 lib)

	* src/lib/gtk_extras/thumbnail.py (check_for_thumbnail): md5 ->
	hashlib (remove deprecated md5 lib)

	* src/lib/backends/db.py : Fix unicode type errors from sqlalchemy.
	* src/lib/*: Change servings->yields

2009-03-27  Thomas Hinkle  <tom@grenville>

	* src/lib/exporters/exportManager.py (ExportManager.offer_multiple_export):
	Include any recipes linked to in your recipes in your export.
